packages/ob-kube/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    uri: api.obudynku.pl
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
